--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@next/font": "^14.2.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "class-variance-authority": "^0.7.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "next": "15.2.4",
