--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/font": "^14.2.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.15.0",
