--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
-    "next": "15.2.4",
+    "next": "^14.2.35",
     "pdf.js": "^0.1.0",
     "pdfjs-dist": "^5.1.91",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.5.0",
     "react-particles": "^2.12.2",
@@ -36,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint-config-next": "^16.1.4",
     "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
